--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
